<resources>
    <string name="app_name">动态课表</string>
    <string name="course_month">月</string>
    <string name="course_week_1">周一</string>
    <string name="course_week_2">周二</string>
    <string name="course_week_3">周三</string>
    <string name="course_week_4">周四</string>
    <string name="course_week_5">周五</string>
    <string name="course_week_6">周六</string>
    <string name="course_week_7">周日</string>
    <string name="course_no">第</string>
    <string name="course_week">周</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_dev_desc"><![CDATA[Android开发 && 服务器 && 设计]]></string>
</resources>
